[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "DPS"
version = "0.0.1"
authors = [
  { name="Jianru Ding", email="jrding@uchicago.edu" },
]
description = "Dynamic Power Scheduler"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "scipy",
    "numpy",
    "pathlib",
    "subprocess",
    "csv",
    "socket",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
